--- a/Database.ipynb
+++ b/Database.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dependencies and Setup\n",
     "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
-    "from config import username, password, host, port"
+    "#from config import username, password, host, port"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "4                  Italian    161.0  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -506,158 +506,22 @@
        "4  Star Wars: Episode VII - The Force Awakens    ...          NaN          NaN"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "new_imdb_df=imdb_data_df[[\"movie_title\",\"gross\", \"budget\"]].copy()\n",
+    "new_imdb_df.rename(columns={\"movie_title\": \"Title\"})\n",
     "new_imdb_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Title</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>IMDb</th>\n",
-       "      <th>Netflix</th>\n",
-       "      <th>Hulu</th>\n",
-       "      <th>Prime Video</th>\n",
-       "      <th>Disney+</th>\n",
-       "      <th>Directors</th>\n",
-       "      <th>Genres</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Language</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Inception</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>8.8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Christopher Nolan</td>\n",
-       "      <td>Action,Adventure,Sci-Fi,Thriller</td>\n",
-       "      <td>United States,United Kingdom</td>\n",
-       "      <td>English,Japanese,French</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>The Matrix</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>8.7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Lana Wachowski,Lilly Wachowski</td>\n",
-       "      <td>Action,Sci-Fi</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>English</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Avengers: Infinity War</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>8.5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Anthony Russo,Joe Russo</td>\n",
-       "      <td>Action,Adventure,Sci-Fi</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>English</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Back to the Future</td>\n",
-       "      <td>1985</td>\n",
-       "      <td>8.5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Robert Zemeckis</td>\n",
-       "      <td>Adventure,Comedy,Sci-Fi</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>English</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>The Good, the Bad and the Ugly</td>\n",
-       "      <td>1966</td>\n",
-       "      <td>8.8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Sergio Leone</td>\n",
-       "      <td>Western</td>\n",
-       "      <td>Italy,Spain,West Germany</td>\n",
-       "      <td>Italian</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                            Title  Year  IMDb  Netflix  Hulu  Prime Video  \\\n",
-       "0                       Inception  2010   8.8        1     0            0   \n",
-       "1                      The Matrix  1999   8.7        1     0            0   \n",
-       "2          Avengers: Infinity War  2018   8.5        1     0            0   \n",
-       "3              Back to the Future  1985   8.5        1     0            0   \n",
-       "4  The Good, the Bad and the Ugly  1966   8.8        1     0            1   \n",
-       "\n",
-       "   Disney+                       Directors                            Genres  \\\n",
-       "0        0               Christopher Nolan  Action,Adventure,Sci-Fi,Thriller   \n",
-       "1        0  Lana Wachowski,Lilly Wachowski                     Action,Sci-Fi   \n",
-       "2        0         Anthony Russo,Joe Russo           Action,Adventure,Sci-Fi   \n",
-       "3        0                 Robert Zemeckis           Adventure,Comedy,Sci-Fi   \n",
-       "4        0                    Sergio Leone                           Western   \n",
-       "\n",
-       "                        Country                 Language  \n",
-       "0  United States,United Kingdom  English,Japanese,French  \n",
-       "1                 United States                  English  \n",
-       "2                 United States                  English  \n",
-       "3                 United States                  English  \n",
-       "4      Italy,Spain,West Germany                  Italian  "
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_netflix_df=netflix_data_df.drop(columns=[\"ID\", \"Age\", \"Rotten Tomatoes\", \"Type\", \"Runtime\"]).copy()\n",
     "new_netflix_df.head()"
@@ -665,12 +529,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = create_engine(f\"postgresql://{username}:{password}@{host}:{port}/postgres\")\n",
-    "conn=engine.connect()"
+    "sql_lite = \"sqlite:///my_sqlite.db\"\n",
+    "engine = create_engine(sql_lite)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_imdb_df.to_sql(name=\"new_imdb_df\", con=engine, if_exists=\"append\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.read_sql_query('select * from new_imdb_df', con=engine).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_netflix_df.to_sql(name=\"new_netflix_df\", con=engine, if_exists=\"append\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.read_sql_query('select * from new_netflix_df', con=engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine.table_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_netflix_df.merge(new_imdb_df, how='inner', on='Title')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.read_sql_query(\"SELECT Year FROM new_imdb_df JOIN new_netflix_df ON new_imdb_df.movie_title = new_netflix_df.Title\", con=engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.read_sql_query(\"\"\"SELECT * FROM new_netflix_df\n",
+    "JOIN new_imdb_df\n",
+    "ON new_netflix_df.Title = new_imdb_df.movie_title\"\"\", con=engine).to_html()"
    ]
   },
   {
